fix(STN-406): IE 11 Text Overflow in Rows (#640)
* fix: ie 11 text was overflowing the width of the page when a single card (postcard) was used in a row

* fix: heading link text color on focus should be black (should have gone in another PR, #641  but we didn't realize at the time)

* chore: commit compiled CSS

--- a/docroot/themes/humsci/humsci_basic/src/scss/elements/_base.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/elements/_base.scss
@@ -46,7 +46,8 @@ h1 {
   a:not([class]) {
     @include hb-link;
 
-    &:hover {
+    &:hover,
+    &:focus {
       @include hb-global-color('color', 'black');
     }
   }
@@ -59,7 +60,8 @@ h2 {
   a:not([class]) {
     @include hb-link;
 
-    &:hover {
+    &:hover,
+    &:focus {
       @include hb-global-color('color', 'black');
     }
   }
@@ -71,7 +73,8 @@ h3 {
   a:not([class]) {
     @include hb-link;
 
-    &:hover {
+    &:hover,
+    &:focus {
       @include hb-global-color('color', 'black');
     }
   }
@@ -83,7 +86,8 @@ h4 {
   a:not([class]) {
     @include hb-link;
 
-    &:hover {
+    &:hover,
+    &:focus {
       @include hb-global-color('color', 'black');
     }
   }
@@ -95,7 +99,8 @@ h5 {
   a:not([class]) {
     @include hb-link;
 
-    &:hover {
+    &:hover,
+    &:focus {
       @include hb-global-color('color', 'black');
     }
   }
@@ -107,7 +112,8 @@ h6 {
   a:not([class]) {
     @include hb-link;
 
-    &:hover {
+    &:hover,
+    &:focus {
       @include hb-global-color('color', 'black');
     }
   }
