--- a/docroot/themes/humsci/humsci_basic/src/scss/objects/_layouts.row.scss
+++ b/docroot/themes/humsci/humsci_basic/src/scss/objects/_layouts.row.scss
@@ -76,6 +76,12 @@
   }
 }
 
+// When there is more than one item in a row it uses flexbox however when there
+// is only one item in a row and we use flexbox it causes overflow issues in IE 11.
+.counted-items-1.field-hs-row-components {
+  display: block;
+}
+
 .ptype-hs-text-area {
   width: 100%;
 }
